2005-11-07  Wakaba  <w@suika.fam.cx>

	* Property.js: Support for |padding-left|, |padding-top|, |padding-bottom|,
	|padding-right|, |margin-left|, |margin-right|, |margin-top|,
	|margin-bottom|, |border-style-top|, |border-style-bottom|,
	|border-style-right|, |border-style-left|, |border-color-left|,
	|border-color-top|, |border-color-bottom|, |border-color-right|,
	|border-width-top|, |border-width-bottom|, |border-width-left|,
	|border-width-right|, |border-width|, |border-color|, |border-style|,
	|margin|, and |padding| added.  (Most are buggy and not work.)
	(_PropImpl_Color._GetSpecifiedValue): Split from |setSpecifiedValue|.
	Missing |break|s inserted.
	
	* SimpleParser.js (_ParsePriority): Don't error when end
	of token before |;|.
	
	* Value.js (matchTypeURI): Type URI
	<tag:manakai@suika.fam.cx,2005-11:non-negative-length-or-percentage> added.
	(addItem): New method.
	(ValueList.getCSSText): Implemented.

2005-11-06  Wakaba  <w@suika.fam.cx>

	* Property.js: Support for |color| and |opacity| properties added.
	(_PropImpl): Support for |allowedFunction| parameter added.
	
	* Selectors.js (matchElement): Use |previousSiblingElement| attribute
	instead of |previousElement|.
	
	* SimpleParser.js (_GetNextValue): Functions |rgb|, |rgba|,
	|hsl|, and |hsla| supported.
	
	* Value.js: Non-CSS2 constants are removed.  Now |cssValueType|
	and |primitiveType| attributes always takes CSS2 value.
	(CSSCascadingValue): Removed.  Now |inherit| and other values
	are represented by |CSSIdentValue| class.
	(createCSSKeywordValueNS): Always creates a |CSSIdentValue| object.
	(createCSSRGBAValue, createCSSHSLValue, createCSSHSLAValue): New methods.
	(CSSValue.typeURI): New attribute.
	(CSSValue.matchTypeURI): New method.
	(RGBValue.getCSSText): Typo fixed.  Inserts |SPACE| characters after |COMMA|s.
	(CSSRGBAValue, CSSHSLValue, CSSHSLAValue): New classes.

2005-11-05  Wakaba  <w@suika.fam.cx>

	* Node.js (CSSNameSpaceRule): Renamed from |CSSNamespaceRule|